Updating API documentation
